Fix bug with long page titles overlapping the hamburger menu icon on mobile.

--- a/src/css/template.css
+++ b/src/css/template.css
@@ -89,7 +89,7 @@
     & .nav .site {
         font-size: var(--fontSizeSite);
         font-weight: var(--fontWeight);
-        margin: 0;
+        margin: 0 var(--widthLarge) 0 0;
         padding: 0;
     }
 }
